--- a/Inicio/templates/Inicio/inicio.html
+++ b/Inicio/templates/Inicio/inicio.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-md-6 text-center">
                 <div class="purple-circle">
-                    <img src="{% static 'inicio/img/Person cepil.png' %}" alt="Dental Equipment" style="width: 100%;">
+                    <img src="{% static 'Inicio/img/Person cepil.png' %}" alt="Dental Equipment" style="width: 100%;">
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
             <!-- Featured Post -->
             <div class="col-lg-7 mb-4">
                 <article class="featured-post">
-                    <img src="{% static 'inicio/img/rectangle_203.webp' %}" alt="Featured post"
+                    <img src="{% static 'Inicio/img/rectangle_203.webp' %}" alt="Featured post"
                         class="img-fluid rounded-3 mb-3" style="width: 100%; height: 400px; object-fit: cover;">
                     <small class="text-purple">Lorem 1</small>
                     <h3 class="mt-2">Lorem ipsum dolor sit amet, consectetuer adipiscing
