--- a/Inicio/templates/Inicio/base.html
+++ b/Inicio/templates/Inicio/base.html
@@ -8,7 +8,7 @@
     <title>DentiCare</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href='{% static "inicio/css/estilo.css" %}'>
+    <link rel="stylesheet" href='{% static "Inicio/css/estilo.css" %}'>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'inicio' %}">
-                <img src="{% static 'inicio/img/dientess.png' %}" alt="ClickDental">
+                <img src="{% static 'Inicio/img/dientess.png' %}" alt="ClickDental">
                 <span class="care1">Denti<span class="care">Care</span></span>
             </a>
             <div class="d-flex align-items-center flex-grow-1 justify-content-between">
@@ -226,7 +226,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'inicio/js/eventos.js' %}"></script>
+    <script src="{% static 'Inicio/js/eventos.js' %}"></script>
 </body>
 
 </html>
